<resources>
    <string name="app_name">AfKav</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="scan_card">Scan card</string>
    <string name="remove_card">Remove card</string>
    <string name="back">Back</string>
    <string name="transmit">Transmit</string>

    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>

    <string name="remove_card_confirmation">Are you sure you want to remove you card?</string>
    <string name="overwrite_card_confirmation">Are you sure you want to overwrite the saved card ID?</string>

    <string name="ready_to_transmit">Ready to transmit</string>
    <string name="no_card_saved">No card saved</string>
    <string name="scanning_for_card">Scanning for card</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>